--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "sourceMap": true,
     "module": "commonjs",
     "target": "es6",
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "strictNullChecks": true
   }
 }
