--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "baconjs": "^0.7.95",
     "lodash": "^4.17.4",
-    "ts-loader": "^2.0.3"
+    "morphdom": "^2.3.3",
+    "ts-loader": "^2.0.3",
+    "typescript": "^2.6.2"
   },
   "devDependencies": {
     "@types/node": "^8.0.33",
